# 3D-Renderer

./: CMakeLists.txt  README.md  TODO.md  learning.cpp  main.cpp  run.sh
course-learning/: learning.cpp
cpp-course/: learning.cpp
opengl-course/: Camera.cpp  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  PointLight.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Window.h  main.cpp
opengl-course/shaders/: Shader.cpp  Shader.h  shader.frag
renderer/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Mesh.cpp  Model.cpp  Model.h  PointLight.cpp  PointLight.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
renderer/shaders/: Shader.cpp  Shader.h  shader.frag  shader.vert
scripts/: build.sh  run.sh
